sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:30: error: value !> is not a member of Int
    while(j*1 !> i){
              ^